# fee-manager

./: .gitignore  API_SPEC.md  CLAUDE.md  Cargo.toml  Containerfile  LICENSE  README.md  cliff.toml  config.yaml  devenv.nix
.github/sql/: generate_data.py  test_data.sql
.github/workflows/: ci.yml  release.yml
.sqlx/: query-0a730799810f5b35aa24db056260240ccafd4a135c099028128b852931ff3ae1.json  query-1a279319bd670b6a452222decff7fd82856fe13419530a14383849829426e924.json  query-32caa3732ec3c35ae00390fb85e5040ea0683fc62b301573211b5a67e6708d4b.json  query-45d8f0b14e8ff07e3f5e2686eec9a915fcf06eef5a362293ddec4d561133eea1.json  query-462c7e5ad0e03983da96d5320365afcbcda788c4efc762455e6cc06fbb0f19f3.json  query-693faf7baafe64fe093d4b7394000ea5eccf95500879b1370d4d088c6438f0de.json  query-ab839d3ca79a33721f30615e7dd6c731cfb672b7a7bd33ad44b33180e213b4a9.json  query-ae837c0c4e2c52191890132efb5995d66d1abdd8c0af8f193180d6d580781df4.json  query-e7d7daa1f9913b1dc863dac975aabe28c42d6539fb3361e2ddf6d68f69bcb06d.json  query-f4921b7dd4b9be7863130eeb3d653c842767bd1b89652ccb9dac8c181e774eb4.json
migrations/: 20250220103424_init.down.sql  20250220103424_init.up.sql  20260110103424_init.down.sql  20260110103424_init.up.sql  20260111000001_add_auth_tokens.up.sql
scripts/: clean_testdata.sql  seed.sh  seed_testdata.sql
src/: config.rs  errors.rs  handlers.rs  lib.rs  main.rs  models.rs  openapi.rs  schema.rs
src/addresses/: bls.rs  execution.rs  mod.rs
src/audit/: context.rs  mod.rs
src/auth/: handlers.rs  middleware.rs  mod.rs  service.rs
src/handlers/: default_config.rs  mod.rs  proposer_config.rs
src/handlers/commit_boost/: mod.rs  mux.rs
src/handlers/vouch/: default_configs.rs  execution_config.rs  mod.rs  proposer_patterns.rs  proposers.rs
tests/: default_configs_test.rs  execution_config_test.rs  health.rs  health_test.rs  mux_test.rs  proposer_patterns_test.rs  proposers_test.rs
tests/common/: mod.rs
