[package]
name = "fee-manager"
version = "0.1.0"
edition = "2021"

[[bin]]
path = "src/main.rs"
name = "fee-manager"

[dependencies]
axum = "0.8"
utoipa = { version = "5", features = ["axum_extras"] }
utoipa-swagger-ui = { version = "9", features = ["axum"] }

hex = { version = "0.4", features = ["serde"] }
config = "0.15"
thiserror = "2"

sqlx = { version = "0.8", features = ["postgres", "runtime-tokio"] }

serde = {version = "1.0", features = ["derive"] }
serde_derive = "1.0"
serde_json = "1.0"
serde_with = "3.12"

tokio = { version = "1.42", features = ["full"] }

tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
url = { version= "2.5", features = ["serde"] }
rust_decimal = "1.36"

[dev-dependencies]
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls"] }
