[package]
name = "fee-manager"
version = "0.1.0"
edition = "2021"

[lib]
path = "src/lib.rs"
name = "fee_manager"

[[bin]]
path = "src/main.rs"
name = "fee-manager"

[dependencies]
axum = "0.8"
utoipa = { version = "5", features = ["axum_extras", "chrono", "uuid"] }
utoipa-swagger-ui = { version = "9", features = ["axum"] }

hex = { version = "0.4", features = ["serde"] }
sha2 = "0.10"
rand = "0.9"
config = "0.15"
thiserror = "2"

sqlx = { version = "0.8", features = ["postgres", "runtime-tokio", "chrono", "uuid"] }
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }

serde = {version = "1.0", features = ["derive"] }
serde_derive = "1.0"
serde_json = "1.0"
serde_with = "3.12"

tokio = { version = "1.49", features = ["full"] }

tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
url = { version= "2.5", features = ["serde"] }
rust_decimal = "1.39"

[dev-dependencies]
reqwest = { version = "0.13", default-features = false, features = ["json"] }
